--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 Kivy = "^2.3.0"
+kivy-matplotlib-widget = "^0.11.0"
+seaborn = "^0.13.2"
 
 
 [build-system]
