--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["AccelQuasarDragon <138998466+AccelQuasarDragon@users.noreply.github.
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "3.10.9"
 Kivy = "^2.3.0"
 kivy-matplotlib-widget = "^0.11.0"
 seaborn = "^0.13.2"
+pyinstaller = "^6.8.0"
 
 
 [build-system]
