--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ kivy-matplotlib-widget = "^0.12.4"
 seaborn = "^0.13.2"
 yt-dlp = "^2024.5.27"
 pyinstaller = "^6.8.0"
+kivymd = {url = "https://github.com/kivymd/KivyMD/archive/master.zip"}
+psutil = "^6.0.0"
+panda3d = "^1.10.14"
+panda3d-kivy = "^0.5.2"
 
 
 [build-system]
